codegen/tests/fail/delegate/variant_with_multiple_fields.rs
use delegation::delegate;

#[delegate]
enum Name {
    First { first: String, last: String },
}

fn main() {}
