codegen/tests/fail/delegate/variant_with_multiple_fields.stderr
error: enum variant must have exactly one field
 --> tests/fail/delegate/variant_with_multiple_fields.rs:5:11
  |
5 |     First { first: String, last: String },
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
